--- a/algonquinparksolutionwebflow.css
+++ b/algonquinparksolutionwebflow.css
@@ -1176,11 +1176,11 @@ html.w-mod-js *[data-ix="hero-text"] {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
 }
 
-.container {
+.contaner2 {
   padding: 0 16px;
 }
 
-.container::after, .row::after {
+.contaner2:after, .row::after {
   content: "";
   clear: both;
   display: table;
